--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,5 @@
 #if !defined(UNISTRINGXX_CONFIG_H)
-#define (UNISTRING_CONFIG_H)
+#define UNISTRINGXX_CONFIG_H
 
 // Version information
 #define UNISTRINGXX_VERSION_YEAR @UNISTRINGXX_VERSION_YEAR@
